fixed bug causing too wide screen - changed .footerContainer to 100% width not 100vw

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,6 +149,14 @@
     margin-top: 8vh;
 }
 
+.marginBottomSmall {
+    margin-bottom: 5vh;
+}
+
+.marginBottomMedium {
+    margin-bottom: 10vh;
+}
+
 .inlineBlock {
     display: inline-block;
 }
@@ -214,12 +222,16 @@ header {
 .footerContainer {
     position: absolute;
     bottom: 0;
-    min-width: 100vw;
+    min-width: 100%;
 }
 
 #footer {
     padding-top: 1.5vmin;
     padding-bottom: 1.5vmin;
+}
+
+.footerMargin {
+    height: 20vh;
 }
 
 #footerFlags {
